--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 div {
-    background-color: #e6e6fa;
+    background-color: #006494;
     border: 1px solid #ccc;
     padding: 20px;
     margin: 10px;
