--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 div {
-    background-color: #006494;
+    background-color: #0031FD;
     border: 1px solid #ccc;
     padding: 20px;
     margin: 10px;
@@ -19,7 +19,7 @@ div {
 }
 
 button {
-    background-color: #add8e6;
+    background-color: #154497;
     border: none;
     padding: 10px;
     cursor: pointer;
